Added a bamboo tree marker

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 
     <!-- Google Maps API -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEowV4krMWS_FrAm70UP4wOAaBiZ3mvkQ&callback=initMap&v=weekly"
-      defer
-    ></script>
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEowV4krMWS_FrAm70UP4wOAaBiZ3mvkQ&callback=initMap&v=weekly&libraries=marker"
+    async
+    defer>
+</script>
+
   </body>
 </html>
