Changed Marker icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2>Green Mapping</h2>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Map</a></li>
+        <li><a href="#">Fauna</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -33,7 +33,6 @@
       <div id="map"></div>
 
       <!-- View Gallery Button -->
-      <button id="view-gallery">View Gallery</button>
 
       <!-- Gallery Modal -->
       <div id="gallery-modal" class="hidden">
