--- a/index.html
+++ b/index.html
@@ -185,6 +185,26 @@
               pillows and mattresses.
             </p>
           </div>
+
+          <div class="flora-item">
+            <img src="Plants/jamuntree/jamuntree.jpg" alt="Jamun Tree" />
+            <h3>Jamun Tree or Indian Blackberry</h3>
+            <p><b>Origin:</b> Indian Subcontinent, Southeast Asia</p>
+            <p><b>Coordinates:</b>12.020798, 79.855852</p>
+            <p>
+              The Jamun Tree is an evergreen tree with a dense canopy of elliptical leaves and clusters of small, round fruits. Its deep purple hue and unique sweet-tart taste make Jamun a sought-after treat in various culinary delights.
+            </p>
+          </div>
+
+          <div class="flora-item">
+            <img src="Plants/Yelowsilkcotton/yellowsilkcotton.jpg" alt="Yellow Silk Cotton Tree" />
+            <h3>Yellow Silk Cotton Tree or Cochlospermum gossypium</h3>
+            <p><b>Origin:</b> Tropical regions of Indian Subcontinent, Southeast Asia</p>
+            <p><b>Coordinates:</b>12.021068, 79.855660</p>
+            <p>
+              A flowering plant growing to a height of 7.5 m (25 ft) usually found in dry deciduous forests Another common name is buttercup tree.In Theravada Buddhism, this plant is said to have used as the tree for achieved enlightenment.
+            </p>
+          </div>
         </div>
       </section>
       <!-- Fauna Facts Section -->
