removed the stars from some plants in the info page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               src="Plants/Red frangipani, Plumeria rubra.jpg"
               alt="Red Frangipani"
             />
-            <h3>Red Frangipani (*Plumeria rubra*)</h3>
+            <h3>Red Frangipani (Plumeria rubra)</h3>
             <p><b>Origin:</b> Mexico, Central America</p>
             <p><b>Location:</b> Opposite to Boy's Tea Time</p>
             <p>
@@ -88,7 +88,7 @@
               src="Plants/Sausage Tree, Kigelia Africana/1.jpg"
               alt="Sausage Tree"
             />
-            <h3>Sausage Tree (*Kigelia africana*)</h3>
+            <h3>Sausage Tree (Kigelia africana)</h3>
             <p><b>Origin:</b> Tropical Africa</p>
             <p><b>Coordinates:</b> 12.030723, 79.858859</p>
             <p>
@@ -102,7 +102,7 @@
               src="Plants/Touch me not, Mimosa Pudica/2.jpg"
               alt="Touch-Me-Not"
             />
-            <h3>Touch-Me-Not (*Mimosa pudica*)</h3>
+            <h3>Touch-Me-Not (Mimosa pudica)</h3>
             <p><b>Origin:</b> South and Central America</p>
             <p><b>Coordinates:</b> 12.030723, 79.858859</p>
             <p>
@@ -116,7 +116,7 @@
               src="Plants/Peltophorum pterocarpum, Copper Pod/1.jpg"
               alt="Copper Pod"
             />
-            <h3>Copper Pod (*Peltophorum pterocarpum*)</h3>
+            <h3>Copper Pod (Peltophorum pterocarpum)</h3>
             <p><b>Origin:</b> South and Southeast Asia</p>
             <p><b>Coordinates:</b> 12.030633, 79.858880</p>
             <p>
@@ -127,7 +127,7 @@
 
           <div class="flora-item">
             <img src="Plants/African.jpg" alt="African Tulip Tree" />
-            <h3>African Tulip Tree (*Spathodea campanulata*)</h3>
+            <h3>African Tulip Tree (Spathodea campanulata)</h3>
             <p><b>Origin:</b> West Africa</p>
             <p><b>Coordinates:</b> 12.031510, 79.860296</p>
             <p>
@@ -141,7 +141,7 @@
               src="Plants/Empress tree, Paulownia tomentosa.jpg"
               alt="Empress Tree"
             />
-            <h3>Empress Tree (*Paulownia tomentosa*)</h3>
+            <h3>Empress Tree (Paulownia tomentosa)</h3>
             <p><b>Origin:</b> China</p>
             <p><b>Coordinates:</b> 12.033173, 79.859959</p>
             <p>
@@ -155,7 +155,7 @@
               src="Plants/Neem Tree, Azadirachta Indica/unnamed.jpg"
               alt="Neem Tree"
             />
-            <h3>Neem Tree (*Azadirachta indica*)</h3>
+            <h3>Neem Tree (Azadirachta indica)</h3>
             <p><b>Origin:</b> Indian Subcontinent</p>
             <p><b>Coordinates:</b> 12.034057, 79.857298</p>
             <p>
@@ -166,7 +166,7 @@
 
           <div class="flora-item">
             <img src="Plants/MangoTree.jpg" alt="Mango Tree" />
-            <h3>Mango Tree (*Mangifera indica*)</h3>
+            <h3>Mango Tree (Mangifera indica)</h3>
             <p><b>Origin:</b> South Asia</p>
             <p><b>Coordinates:</b> 12.016100, 79.853523</p>
             <p>
@@ -177,7 +177,7 @@
 
           <div class="flora-item">
             <img src="Plants/KapokTree.jpg" alt="Kapok Tree" />
-            <h3>Kapok Tree (*Ceiba pentandra*)</h3>
+            <h3>Kapok Tree (Ceiba pentandra)</h3>
             <p><b>Origin:</b> Central and South America</p>
             <p><b>Coordinates:</b> 12.017323, 79.853045</p>
             <p>
@@ -192,17 +192,29 @@
             <p><b>Origin:</b> Indian Subcontinent, Southeast Asia</p>
             <p><b>Coordinates:</b>12.020798, 79.855852</p>
             <p>
-              The Jamun Tree is an evergreen tree with a dense canopy of elliptical leaves and clusters of small, round fruits. Its deep purple hue and unique sweet-tart taste make Jamun a sought-after treat in various culinary delights.
+              The Jamun Tree is an evergreen tree with a dense canopy of
+              elliptical leaves and clusters of small, round fruits. Its deep
+              purple hue and unique sweet-tart taste make Jamun a sought-after
+              treat in various culinary delights.
             </p>
           </div>
 
           <div class="flora-item">
-            <img src="Plants/Yelowsilkcotton/yellowsilkcotton.jpg" alt="Yellow Silk Cotton Tree" />
+            <img
+              src="Plants/Yelowsilkcotton/yellowsilkcotton.jpg"
+              alt="Yellow Silk Cotton Tree"
+            />
             <h3>Yellow Silk Cotton Tree or Cochlospermum gossypium</h3>
-            <p><b>Origin:</b> Tropical regions of Indian Subcontinent, Southeast Asia</p>
+            <p>
+              <b>Origin:</b> Tropical regions of Indian Subcontinent, Southeast
+              Asia
+            </p>
             <p><b>Coordinates:</b>12.021068, 79.855660</p>
             <p>
-              A flowering plant growing to a height of 7.5 m (25 ft) usually found in dry deciduous forests Another common name is buttercup tree.In Theravada Buddhism, this plant is said to have used as the tree for achieved enlightenment.
+              A flowering plant growing to a height of 7.5 m (25 ft) usually
+              found in dry deciduous forests Another common name is buttercup
+              tree.In Theravada Buddhism, this plant is said to have used as the
+              tree for achieved enlightenment.
             </p>
           </div>
         </div>
